--- a/MIS2A.html
+++ b/MIS2A.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>李盈蓁個人簡介</title>
+	<title>李盈蓁個人簡介2</title>
 </head>
 <body>
 	
